Global stuff are working but not finished yet
still have to add type_compte table and make the user not being able to validate twice the same virement